# C-Sort-cli

sort-binary/: CMakeLists.txt  main.c  test  test.txt
sort-text/: CMakeLists.txt  README.md  main.c  main.h
sort-text/tests/: tests_sort.c
